--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "ai": "^3.4.9",
     "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "contract-chatbot": "file:",
     "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.451.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.15",
+    "openai": "^4.67.3",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.9",
