--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "lucide-react": "^0.451.0",
     "nanoid": "^5.0.7",
     "next": "14.2.15",
+    "next-themes": "^0.3.0",
     "openai": "^4.67.3",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.9",
     "react-pdf": "^6.2.2",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
